--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ h3{
     font-size: 30px;
 }
 p{
-    font-size: 20px;
+    font-size: 30px;
+    color: grey;
+    text-align: justify;
 }
 .name{
     color: tomato;
@@ -24,7 +26,14 @@ section{
 }
 .half-width{
     width: 50%;
+    padding-left: 80px;
+    padding-right: 1px;
+    
 }
 .half-width img{
-    width: 100%;
+    width: 80%;
+    
+}
+.top-banner{
+    background-image: url(image/top-banner.png);
 }
